# breeze-tree-sitter-parsers

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build-grammars  build-grammars.js  check-branch-migration.sh  check-duplicate-grammars.sh  check-missing-parser.js  check-rust-bindings.js  create-platform-packages.js  grammars.json  index.js  nvim-grammars.jsonc  package.json  postinstall.js  publish-packages.sh  pyproject.toml  test-distribution.js  test-platform-detection.js  update-package-scope.js  validate.js
.claude/: settings.local.json
.github/workflows/: ci.yml
breeze-tree-sitter-parsers-sys/: Cargo.toml  build.rs
breeze-tree-sitter-parsers-sys/examples/: smoke.rs
breeze-tree-sitter-parsers-sys/src/: lib.rs
scripts/: README.md  compare-grammars.js  grammars-align-nvim-treesitter.lua  grammars-annotate-highlights.js  grammars-list-highlights.js  grammars-needs-generation.js  merge-grammars.js  update-grammars.ts
validation/: Cargo.toml  build.rs
validation/src/: main.rs
