[package]
name = "tree-sitter-parsers-validation"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false
build = "build.rs"

[dependencies]
tree-sitter.workspace = true
tree-sitter-language.workspace = true

[build-dependencies]
serde.workspace = true
serde_json.workspace = true
